Fix white space in pop posts images

--- a/app/styles/components/_popularposts.scss
+++ b/app/styles/components/_popularposts.scss
@@ -49,6 +49,7 @@
   }
 
   &__image {
+    display: block;
     width: 100%;
     min-height: 21rem;
     object-fit: cover;
